# Drift-Detector

./: .gitignore  README.md  pyproject.toml
examples/: settings.json
src/drift_detector/: __init__.py  detector.py  features.py  hook.py  judge.py  neighbor.py
src/drift_detector/data/: nn_reference_v0.npz  non_llm_detector_v0.pkl
tests/: test_detector.py
