[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-detector"
version = "0.1.0"
description = "Non-LLM failure detector for coding agents; ships with a Claude Code hook"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Stable-Agent Contributors", email = "bradyt2215@gmail.com"}]
keywords = ["llm", "coding-agents", "drift-detection", "claude-code", "swe-bench"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
dependencies = [
    "scikit-learn>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
drift-hook = "drift_detector.hook:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drift_detector = ["data/*.pkl"]
